fix: search field from tree view got too large because of previous fix of inconsistencies

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -92,7 +92,9 @@ input[type="text"] {
     white-space: nowrap;
     word-wrap: normal;
 }
-
+#search-field{
+    width: 250px;
+}
 /******************************************************************************
     Header search
 */
